--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body bgcolor="#008B8B">
     <center>
-        <img src="C:\Users\hp\Desktop\portfolio-html file\images\logo1.jfif" height=100 width=90>
+        <img src="images\logo1.jfif" height=100 width=90>
     </center>
         <font color=white size=6>
         <h1 align=center>DE PAUL SCHOOL</h1>
@@ -41,18 +41,18 @@
     </p>
 </p>
 <center>
-<img src="C:\Users\hp\Desktop\portfolio-html file\images\dp.jpg">
+<img src="images\dp.jpg">
 </center>
 </p>
         <div id="slider">
            <figure>
               
-            <img src="C:\Users\hp\Desktop\portfolio-html file\images\depaul1.jpg">   
-            <img src="C:\Users\hp\Desktop\portfolio-html file\images\depaul2.jpg">
+            <img src="images\depaul1.jpg">   
+            <img src="images\depaul2.jpg">
              
-            <img src="C:\Users\hp\Desktop\portfolio-html file\images\depaul4.jpg">
-            <img src="C:\Users\hp\Desktop\portfolio-html file\images\depaul5.jpg">
-            <img src="C:\Users\hp\Desktop\portfolio-html file\images\ncc.jpg">  
+            <img src="images\depaul4.jpg">
+            <img src="images\depaul5.jpg">
+            <img src="images\ncc.jpg">  
            </figure> 
         </div>
     </body>
