--- a/Addmission.html
+++ b/Addmission.html
@@ -3,8 +3,8 @@
     </head>
     <body bgcolor="#FAF0E6">
         <center>
-        <h1 align=center>STUDENT ADDMISSION FORM</h1>
-        Childs Details
+        <h1 align=center>STUDENT ADMISSION FORM</h1>
+        Child Details
     </p>
         &nbsp;&nbsp;&nbsp;STUDENT NAME&nbsp;&nbsp;&nbsp;&nbsp;
         <input type="text" placeholder="student name" maxlength="50">
