--- a/history.html
+++ b/history.html
@@ -8,7 +8,7 @@ ST. VINCENT DE PAUL (1581-1660)
         </center>
     </p>
 <center>
-<img src="C:\Users\hp\Desktop\portfolio-html file\images\vincent-de-paul.jpg" width="240px" height="240px">
+<img src="images\vincent-de-paul.jpg" width="240px" height="240px">
 </center>
 St. Vincent De Paul was born on 24th April, 1581 in Pouy, a little village near Dax in France. His parents were Jean de Paul and Bertrand de Moras. He became a priest on 23rd September, 1600. After six decades of priestly life, Fr.Vincent breathed his last on 27th September, 1660 pronouncing the holy name of Jesus. "A saint has died" was a popular expression of the crowd who attended the funeral. Pope Benedict XIII beatified him on 13th August, 1724, and he was canonized on 16th June 1737. On May 12th, 1885, Pope Leo XIII declared him "the Patron of all works of charity in the Universal Church".
 
