--- a/gallery.html
+++ b/gallery.html
@@ -9,12 +9,12 @@
         <h1>SCHOOL GALLERY</h1>
         </center>
         <div class="gallery">
-           <a href="C:\Users\hp\Desktop\portfolio-html file\images\cs5.jpeg"><img src="C:\Users\hp\Desktop\portfolio-html file\images\cs5.jpeg"></a>
-           <a href="C:\Users\hp\Desktop\portfolio-html file\images\dp.jpg"><img src="C:\Users\hp\Desktop\portfolio-html file\images\dp.jpg"></a>
-           <a href="C:\Users\hp\Desktop\portfolio-html file\images\cs6.jpg"><img src="C:\Users\hp\Desktop\portfolio-html file\images\cs6.jpg"></a>
-           <a href="C:\Users\hp\Desktop\portfolio-html file\images\cs1.jpg"><img src="C:\Users\hp\Desktop\portfolio-html file\images\cs1.jpg"></a>
-           <a href="C:\Users\hp\Desktop\portfolio-html file\images\cs7.jfif"><img src="C:\Users\hp\Desktop\portfolio-html file\images\cs7.jfif"></a>
-           <a href="C:\Users\hp\Desktop\portfolio-html file\images\cs8.jpg"><img src="C:\Users\hp\Desktop\portfolio-html file\images\cs8.jpg"></a>
+           <a href="images\cs5.jpeg"><img src="images\cs5.jpeg"></a>
+           <a href="images\dp.jpg"><img src="images\dp.jpg"></a>
+           <a href="images\cs6.jpg"><img src="images\cs6.jpg"></a>
+           <a href="images\cs1.jpg"><img src="images\cs1.jpg"></a>
+           <a href="images\cs7.jfif"><img src="images\cs7.jfif"></a>
+           <a href="images\cs8.jpg"><img src="images\cs8.jpg"></a>
         </div>
     </body>
 </html>
