--- a/desk.html
+++ b/desk.html
@@ -5,7 +5,7 @@
         <center>
             <h1 align="center">PRINCIPALS DESK</h1>
         </center>
-        <img src="C:\Users\hp\Desktop\portfolio-html file\images\Principal.jpg" width="240" height="240" style="float: right;margin-rigth: 10px;margin-bottom: 5px;border: solid black 1px;padding: 2px;">
+        <img src="images\Principal.jpg" width="240" height="240" style="float: right;margin-rigth: 10px;margin-bottom: 5px;border: solid black 1px;padding: 2px;">
         FR. SAJU ANTONY, C.M.
 
     </p>
