--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                     <div class="nav-link-wrapper">
 <ul>
     <li><a href="index.html">Home</a></li>
-    <li>Aboutus
+    <li>About Us
         <ul>
-            <li><a href="desk.html">principaldesk</a></li>
-            <li><a href="history.html">schoolhistory</a></li>
+            <li><a href="desk.html">Principal's Desk</a></li>
+            <li><a href="history.html">School History</a></li>
         </ul>
     </li>
-    <li><a href="Addmission.html">Addmission Form</a></li>
+    <li><a href="Addmission.html">Admission Form</a></li>
     <li><a href="contacts.html">Contact</a></li>
     <li><a href="schoolfee.html">Payment Application</a></li>
     <li><a href="gallery.html">Photo Gallery</a></li>
@@ -33,7 +33,7 @@
 
                 <div class="right-side">
                     <div class="brand">
-<div>UNDAVALLI</div>
+
 </div>
 </div>
             </div>
